<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/statusLayout"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvDealStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_margin="8dp"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tvNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusLayout"
                android:layout_margin="8dp"
                android:text="@string/text_deal_name"/>
            <TextView
                android:id="@+id/tvPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_deal_price"
                android:layout_below="@+id/tvNameText"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/tvDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_deal_date"
                android:layout_below="@+id/tvPriceText"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvDealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusLayout"
                android:layout_toEndOf="@+id/tvNameText"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvDealPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDealName"
                android:textAlignment="textEnd"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/tvPriceText"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/tvDealDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDealPrice"
                android:layout_alignParentEnd="true"
                android:textAlignment="textEnd"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:layout_toEndOf="@+id/tvDateText"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>